# gap_detect_v1_project

./: .gitignore  Project_gap_detect_v1.md  README.md  README_Noetic_Humble_bridge_guide.md  gap_detect_v1_project.md  noetic humble 통신 테스트.odt
bridge/: Dockerfile.bridge  bridge_config.yaml  docker-compose.yml  manage_bridge.sh
config/: bridge_mapping.yaml
docs/: doosan_setting.md
scripts/: build_all.sh  build_msgs.sh  clean_ros_env.sh  clean_ros_env_strong.sh  diagnose_robot_connection.sh  setup_bridge_env.sh  setup_ros1_env.sh  setup_ros2_clean.sh  setup_ros2_clean_final.sh  setup_ros2_complete.sh  setup_ros2_env.sh  setup_ros2_final.sh  setup_ros2_final_clean.sh  setup_ros2_final_fix.sh  setup_ros2_final_solution.sh  setup_ros2_final_solution_v2.sh  setup_ros2_fresh_session.sh  setup_ros2_integrated.sh  setup_ros2_pure.sh  setup_ros2_python_xacro.sh  setup_ros2_ultimate.sh  setup_ros2_ultimate_clean.sh  setup_ros2_xacro_fix.sh  setup_ros2_xacro_fixed.sh  test_communication.sh  xacro_fix.py  xacro_ros2.py
shared_msgs/gap_detection_msgs/: CMakeLists.txt  package.xml
shared_msgs/gap_detection_msgs/action/: GapMeasurement.action
shared_msgs/gap_detection_msgs/msg/: MeasurementResult.msg  ProcessComplete.msg  SectionArrival.msg
shared_msgs/gap_detection_msgs/srv/: StartMeasurement.srv  StopMeasurement.srv
shared_msgs/robot_coordination_msgs/: CMakeLists.txt  package.xml
tr200_ws/src/: CMakeLists.txt
tr200_ws/src/gap_detection_msgs/: CMakeLists.txt  package.xml
tr200_ws/src/gap_detection_msgs/msg/: MeasurementCommand.msg  MeasurementResult.msg  ProcessComplete.msg
tr200_ws/src/robot_coordination_msgs/: CMakeLists.txt  package.xml
tr200_ws/src/robot_coordination_msgs/msg/: CoordinationCommand.msg  RobotState.msg  SystemStatus.msg
tr200_ws/src/robot_coordination_msgs/srv/: GetSystemStatus.srv  SetRobotState.srv
