cmake_minimum_required(VERSION 3.0.2)
project(robot_coordination_msgs)

find_package(catkin REQUIRED COMPONENTS
  message_generation
  std_msgs
  geometry_msgs
)

add_message_files(
  FILES
  SystemStatus.msg
  RobotState.msg
  CoordinationCommand.msg
)

add_service_files(
  FILES
  GetSystemStatus.srv
  SetRobotState.srv
)

generate_messages(
  DEPENDENCIES
  std_msgs
  geometry_msgs
)

catkin_package(
  CATKIN_DEPENDS message_runtime std_msgs geometry_msgs
)
