<?xml version="1.0"?>
<package format="2">
  <name>robot_coordination_msgs</name>
  <version>1.0.0</version>
  <description>Robot coordination messages for gap detection system</description>
  <maintainer email="gap_detect@example.com">Gap Detection Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
